php5 env setting

--- a/configs/supervisor/supervisor.d/php.ini
+++ b/configs/supervisor/supervisor.d/php.ini
@@ -1,5 +1,5 @@
 [program:php-fpm]
-command=/usr/sbin/php-fpm7 -c /etc/php7/php-fpm.conf --nodaemonize
+command=/usr/sbin/php-fpm -c /etc/php/php-fpm.conf --nodaemonize
 autostart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
